# luajit

./: .gitignore  CMakeLists.txt
cmake/: MakeSourceList.cmake  SetDynASMFlags.cmake  SetTargetFlags.cmake  SetVersion.cmake
src/: CMakeLists.txt  Makefile  Makefile.dep  lib_misc.c  lib_package.c  lj_arch.h  lj_ccall.c  lj_crecord.c  lj_debug.c  lj_debug.h  lj_def.h  lj_err.c  lj_ffrecord.c  lj_gc.c  lj_mapi.c  lj_obj.h  lj_opt_fold.c  lj_profile.c  lj_record.c  lj_snap.c  lj_state.c  lj_str.c  lj_tab.c  lmisclib.h  luaconf.h  vm_mips.dasc  vm_x64.dasc  vm_x86.dasc
src/host/: CMakeLists.txt  buildvm.c
src/profile/: ljp_memprof.c  ljp_memprof.h  ljp_symtab.c  ljp_symtab.h  ljp_write.c  ljp_write.h
src/utils/: leb128.c  leb128.h
test/: CMakeLists.txt  tarantool-4581-traceback.test.lua
test/unit/lj_utils/: test_leb128.c
